# remill

./: Dockerfile  Dockerfile.llvm
.flox/: env.json
.github/workflows/: build.yml  docker-publish.yml
scripts/: build-preset.sh  docker-lifter-entrypoint.sh  emit-artifact.sh  generate_changelog.sh
scripts/diff_tester_export_insns/: pyproject.toml
scripts/diff_tester_export_insns/diff_tester_export_insns/: ci_runner.py  run.py
scripts/diff_tester_export_insns/tests/: test_diff_tester_export_insns.py
scripts/replace_pc_relative_disactions/: pyproject.toml
scripts/replace_pc_relative_disactions/replace_pc_relative_disactions/: __init__.py  main.py
scripts/replace_pc_relative_disactions/tests/: test_replace_pc_relative_disactions.py
